--- a/config/index.env
+++ b/config/index.env
@@ -1,10 +1,11 @@
-DATABASE=mongodb+srv://eflexmedia1:0ls4kG7pWHsrlYMH@okxexchange.vltif89.mongodb.net/?retryWrites=true&w=majority
+DATABASE=mongodb+srv://eflexmedia1:NiWGKuiRfWiJ4Trr@bestkryptfield.07t5lta.mongodb.net/?retryWrites=true&w=majority
 PORT=8000
 JWT="Availtrade"
 
 SERVICE=gmail
 USER=
 EMAILPASS=
+
 
 
 
