--- a/config/index.env
+++ b/config/index.env
@@ -3,8 +3,8 @@ PORT=8000
 JWT="Availtrade"
 
 SERVICE=gmail
-USER=
-EMAILPASS=
+USER=bestkryptfieldassets@gmail.com
+EMAILPASS=kemrptwmrhtsbjrj
 
 
 
