--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-    "name": "BestKryptfield",
-    "builds": [
-        {
-            "src": "server.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/server.js"
-        }
-    ]
-}
+    "rewrites": [{ "source": "/(.*)", "destination": "/server.js" }]
+  }
