--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-    "rewrites": [{ "source": "/server.js(.*)", "destination": "/server.js" }]
+    "rewrites": [{ "source": "/(.*)", "destination": "/server.js" }]
   }
